[package]
name = "wechat-dump-rs"
version = "1.0.31"
edition = "2021"
repository = "https://github.com/0xlane/wechat-dump-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
clap = "4.4.3"
wxdump= { path = "./wxdump/" }
